--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             need
           </p>
         </div>
-        <button onclick="initiate()">Start Organizing</button>
+        <button class="start-btn" onclick="initiate()">Start Organizing</button>
       </div>
       <div class="lists-parent-parent">
         <div class="lists-parent"></div>
